# embeded_iot_group6

./: .gitignore  README.md  pyproject.toml
project_template-master/: docker-compose.yaml
project_template-master/MapView/: datasource.py  lineMapLayer.py  main.py
project_template-master/agent/docker/mosquitto/data/: mosquitto.db
project_template-master/agent/src/: config.py  file_datasource.py  main.py  route_api.py
project_template-master/agent/src/data/: accelerometer.csv  gps.csv  parking.csv
project_template-master/agent/src/domain/: aggregated_data.py
project_template-master/edge/: config.py  main.py
project_template-master/edge/app/adapters/: agent_mqtt_adapter.py  hub_http_adapter.py  hub_mqtt_adapter.py
project_template-master/edge/app/entities/: agent_data.py  processed_agent_data.py
project_template-master/edge/app/interfaces/: agent_gateway.py  hub_gateway.py
project_template-master/edge/app/usecases/: data_processing.py
project_template-master/edge/docker/: docker-compose.yaml
project_template-master/edge/tests/: test_data_processing.py
project_template-master/hub/: main.py
project_template-master/hub/app/adapters/: store_api_adapter.py
project_template-master/hub/app/entities/: agent_data.py
project_template-master/hub/app/interfaces/: store_gateway.py
project_template-master/hub/docker/: docker-compose.yaml
project_template-master/hub/docker/mosquitto/data/: mosquitto.db
project_template-master/store/: main.py  requirements.txt
