[project]
name = "embeded-iot-group6"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "kivy>=2.3.1",
    "kivy-garden-mapview>=1.0.6",
    "marshmallow>=4.2.2",
    "paho-mqtt>=2.1.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "uvicorn>=0.42.0",
    "websockets>=16.0",
]
